Code quality: removed unused methods and added new test case for page manager eviction