@@ -21,13 +21,41 @@ import com.arcadedb.query.sql.function.conversion.SQLMethodAsDate;
 import com.arcadedb.query.sql.function.conversion.SQLMethodAsDateTime;
 import com.arcadedb.query.sql.function.conversion.SQLMethodAsDecimal;
 import com.arcadedb.query.sql.function.conversion.SQLMethodConvert;
-import com.arcadedb.query.sql.function.text.*;
-import com.arcadedb.query.sql.method.misc.*;
+import com.arcadedb.query.sql.function.text.SQLMethodAppend;
+import com.arcadedb.query.sql.function.text.SQLMethodHash;
+import com.arcadedb.query.sql.function.text.SQLMethodLength;
+import com.arcadedb.query.sql.function.text.SQLMethodReplace;
+import com.arcadedb.query.sql.function.text.SQLMethodRight;
+import com.arcadedb.query.sql.function.text.SQLMethodSubString;
+import com.arcadedb.query.sql.function.text.SQLMethodToJSON;
+import com.arcadedb.query.sql.method.misc.SQLMethodAsBoolean;
+import com.arcadedb.query.sql.method.misc.SQLMethodAsFloat;
+import com.arcadedb.query.sql.method.misc.SQLMethodAsInteger;
+import com.arcadedb.query.sql.method.misc.SQLMethodAsList;
+import com.arcadedb.query.sql.method.misc.SQLMethodAsLong;
+import com.arcadedb.query.sql.method.misc.SQLMethodAsMap;
+import com.arcadedb.query.sql.method.misc.SQLMethodAsSet;
+import com.arcadedb.query.sql.method.misc.SQLMethodAsString;
+import com.arcadedb.query.sql.method.misc.SQLMethodCharAt;
+import com.arcadedb.query.sql.method.misc.SQLMethodField;
+import com.arcadedb.query.sql.method.misc.SQLMethodFormat;
+import com.arcadedb.query.sql.method.misc.SQLMethodIndexOf;
+import com.arcadedb.query.sql.method.misc.SQLMethodJavaType;
+import com.arcadedb.query.sql.method.misc.SQLMethodKeys;
+import com.arcadedb.query.sql.method.misc.SQLMethodLastIndexOf;
+import com.arcadedb.query.sql.method.misc.SQLMethodLeft;
+import com.arcadedb.query.sql.method.misc.SQLMethodNormalize;
+import com.arcadedb.query.sql.method.misc.SQLMethodPrefix;
+import com.arcadedb.query.sql.method.misc.SQLMethodRemove;
+import com.arcadedb.query.sql.method.misc.SQLMethodRemoveAll;
+import com.arcadedb.query.sql.method.misc.SQLMethodSize;
+import com.arcadedb.query.sql.method.misc.SQLMethodSplit;
+import com.arcadedb.query.sql.method.misc.SQLMethodToLowerCase;
+import com.arcadedb.query.sql.method.misc.SQLMethodToUpperCase;
+import com.arcadedb.query.sql.method.misc.SQLMethodTrim;
+import com.arcadedb.query.sql.method.misc.SQLMethodType;
 
-import java.util.HashMap;
-import java.util.Locale;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 
 /**
  * Default method factory.
@@ -35,7 +63,6 @@ import java.util.Set;
  * @author Johann Sorel (Geomatys)
  */
 public class DefaultSQLMethodFactory implements SQLMethodFactory {
-
   private final Map<String, Object> methods = new HashMap<String, Object>();
 
   public DefaultSQLMethodFactory() {
@@ -83,23 +110,13 @@ public class DefaultSQLMethodFactory implements SQLMethodFactory {
   }
 
   @Override
-  public boolean hasMethod(final String iName) {
-    return methods.containsKey(iName.toLowerCase(Locale.ENGLISH));
-  }
-
-  @Override
-  public Set<String> getMethodNames() {
-    return methods.keySet();
-  }
-
-  @Override
   public SQLMethod createMethod(final String name) throws CommandExecutionException {
     final Object m = methods.get(name.toLowerCase());
     final SQLMethod method;
 
     if (m instanceof Class<?>)
       try {
-        method = (SQLMethod) ((Class<?>) m).newInstance();
+        method = (SQLMethod) ((Class<?>) m).getConstructor().newInstance();
       } catch (Exception e) {
         throw new CommandExecutionException("Cannot create SQL method: " + m, e);
       }
